--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+#       - name: Initialize
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: 3.9
       - name: Initialize
-        uses: actions/setup-python@v2
+        uses: actions/setup-java@v2
         with:
-          python-version: 3.9
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Install Dependencies & Lint
         run: ./gradlew -i yarn lint
       - name: Detect Circular Dependencies
