--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,25 +3,12 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
     steps:
       - uses: actions/checkout@v2
-#       - name: Initialize
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: 3.9
-#       - name: Initialize
-#         uses: actions/setup-java@v2
-#         with:
-#           java-version: '11'
-#           distribution: 'adopt'
-
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Initialize
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12
       - name: Install Dependencies
         run: yarn
       - name: Lint
@@ -32,14 +19,3 @@ jobs:
         run: yarn test
       - name: Compile
         run: yarn compile
-    
-#       - name: Grant execute permission for gradlew
-#         run: chmod +x gradlew
-#       - name: Install Dependencies & Lint
-#         run: ./gradlew -i yarn lint
-#       - name: Detect Circular Dependencies
-#         run: ./gradlew -i detectCircularDeps
-#       - name: Unit Test
-#         run: ./gradlew -i test
-#       - name: Compile
-#         run: ./gradlew -i compile
