--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "axios": "0.19.0",
     "chai-as-promised": "7.1.1",
     "core-js": "2.6.5",
+    "crypto-js": "^4.1.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-store": "5.2.0",
     "electron-updater": "4.2.2",
