--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@aics/frontend-insights": "0.2.3",
     "@aics/frontend-insights-plugin-amplitude-node": "0.2.3",
     "@ant-design/icons": "~1.1.0",
+    "@types/crypto-js": "^4.0.2",
     "@types/react-beautiful-dnd": "13.1.1",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.3",
