--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.3",
     "antd": "3.26.0",
-    "axios": "0.19.0",
+    "axios": "0.24.0",
+    "axios-retry": "^3.2.4",
     "chai-as-promised": "7.1.1",
     "core-js": "2.6.5",
     "electron-devtools-installer": "^3.1.1",
