--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base",
   "compilerOptions": {
-    "module": "CommonJS"
+    "module": "CommonJS",
+    "useUnknownInCatchVariables": false,
   }
 }
