--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "typeRoots": ["./node_modules/@types", "./src/renderer/@types"],
-    // "useUnknownInCatchVariables": false,
+    "useUnknownInCatchVariables": false,
   },
   "types": ["node"],
 }
