--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "compile-prod": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 NODE_ENV=production yarn compile",
     "build-executable": "yarn compile && yarn electron-builder",
     "dist": "electron-builder -p always",
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha src/**/test/*.{ts,tsx}",
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/",
@@ -53,32 +53,33 @@
   "license": "ISC",
   "dependencies": {
     "@aics/aics-react-labkey": "~4.6.3",
-    "@aics/frontend-insights": "0.2.3",
-    "@aics/frontend-insights-plugin-amplitude-node": "0.2.3",
-    "@ant-design/icons": "~1.1.0",
+    "@aics/frontend-insights": "~0.2.3",
+    "@aics/frontend-insights-plugin-amplitude-node": "~0.2.3",
+    "@ant-design/icons": "~4.7.0",
     "@types/react-beautiful-dnd": "~13.1.2",
     "@types/react-virtualized-auto-sizer": "~1.0.0",
     "@types/react-window": "~1.8.3",
-    "antd": "3.26.0",
+    "antd": "~4.18.3",
     "axios": "~0.24.0",
-    "chai-as-promised": "7.1.1",
+    "chai-as-promised": "~7.1.1",
     "core-js": "~3.20.2",
+    "electron-devtools-installer": "~3.2.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
-    "humps": "2.0.1",
-    "jsdom": "19.0.0",
-    "jsdom-global": "3.0.2",
-    "lodash": "4.17.21",
-    "moment": "2.29.1",
-    "object-hash": "2.2.0",
+    "humps": "~2.0.1",
+    "jsdom": "~19.0.0",
+    "jsdom-global": "~3.0.2",
+    "lodash": "~4.17.21",
+    "moment": "~2.29.1",
+    "object-hash": "~2.2.0",
     "react": "~17.0.2",
-    "react-beautiful-dnd": "13.1.0",
+    "react-beautiful-dnd": "~13.1.0",
     "react-dom": "~17.0.2",
     "react-table": "~7.7.0",
     "react-virtualized-auto-sizer": "~1.0.5",
     "react-window": "~1.8.6",
     "redux-undo": "~1.0.1",
-    "reselect": "4.1.5",
+    "reselect": "~4.1.5",
     "rimraf": "~3.0.2",
     "source-map-support": "~0.5.21",
     "ts-import-plugin": "~2.0.0",
@@ -86,61 +87,59 @@
     "uuid": "~8.3.0"
   },
   "devDependencies": {
-    "@types/chai": "4.3.0",
+    "@types/chai": "~4.3.0",
     "@types/chai-as-promised": "~7.1.4",
-    "@types/classnames": "~2.3.1",
-    "@types/enzyme": "3.10.11",
-    "@types/humps": "2.0.1",
-    "@types/jsdom": "16.2.14",
-    "@types/lodash": "4.14.178",
+    "@types/enzyme": "~3.10.11",
+    "@types/humps": "~2.0.1",
+    "@types/jsdom": "~16.2.14",
+    "@types/lodash": "~4.14.178",
     "@types/mocha": "~9.0.0",
     "@types/node": "~17.0.8",
-    "@types/object-hash": "2.2.1",
+    "@types/object-hash": "~2.2.1",
     "@types/react": "~17.0.38",
     "@types/react-dom": "~17.0.11",
     "@types/react-redux": "~7.1.21",
     "@types/react-table": "~7.7.9",
     "@types/rimraf": "~3.0.0",
-    "@types/semver": "7.3.9",
-    "@types/sinon": "~9.0.5",
+    "@types/semver": "~7.3.9",
+    "@types/sinon": "~10.0.6",
     "@types/sinon-chai": "~3.2.8",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "@typescript-eslint/eslint-plugin": "~5.9.0",
+    "@typescript-eslint/parser": "~5.9.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "~0.6.6",
     "chai": "~4.3.4",
     "classnames": "~2.3.1",
-    "cross-env": "5.2.0",
-    "css-loader": "2.1.1",
+    "cross-env": "~7.0.3",
+    "css-loader": "~2.1.1",
     "electron": "~16.0.6",
     "electron-builder": "~22.14.5",
     "electron-webpack": "~2.8.2",
     "electron-webpack-ts": "~4.0.1",
-    "enzyme": "3.11.0",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-no-only-tests": "2.6.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "enzyme": "~3.11.0",
+    "eslint": "~8.6.0",
+    "eslint-config-prettier": "~8.3.0",
+    "eslint-plugin-import": "~2.25.4",
+    "eslint-plugin-no-only-tests": "~2.6.0",
+    "eslint-plugin-prettier": "~4.0.0",
+    "eslint-plugin-react": "~7.28.0",
+    "eslint-plugin-react-hooks": "~4.3.0",
     "husky": "~7.0.4",
-    "less": "3.9.0",
-    "less-loader": "4.1.0",
+    "less": "~3.9.0",
+    "less-loader": "~4.1.0",
     "lint-staged": "~12.1.7",
     "madge": "~5.0.1",
     "mocha": "~9.1.3",
-    "mock-css-modules": "2.0.0",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.6.0",
+    "mock-css-modules": "~2.0.0",
+    "postcss-import": "~12.0.1",
+    "postcss-loader": "~3.0.0",
+    "postcss-preset-env": "~6.7.0",
     "prettier": "~2.5.1",
     "react-redux": "~7.2.6",
     "redux": "~4.1.2",
-    "redux-logic": "3.0.3",
-    "sinon": "~9.2.4",
+    "redux-logic": "~3.0.3",
+    "sinon": "~12.0.1",
     "sinon-chai": "~3.7.0",
-    "style-loader": "~0.23.1",
     "typescript": "~4.5.4",
     "webpack": "~4.46.0"
   },
