--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-upload-app",
-  "version": "2.8.2-snapshot.0",
+  "version": "2.9.0",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
