WIP: Use crypto-js

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "compile-prod": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 NODE_ENV=production yarn compile",
     "build-executable": "yarn compile && yarn electron-builder",
     "dist": "electron-builder -p always",
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit --timeout 15000 src/**/test/*.{ts,tsx}",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/",
@@ -53,6 +53,7 @@
     "@aics/frontend-insights": "~0.2.3",
     "@aics/frontend-insights-plugin-amplitude-node": "~0.2.3",
     "@ant-design/icons": "~4.7.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/react-beautiful-dnd": "~13.1.2",
     "@types/react-virtualized-auto-sizer": "~1.0.0",
     "@types/react-window": "~1.8.3",
@@ -60,6 +61,7 @@
     "axios": "~0.24.0",
     "axios-retry": "~3.2.4",
     "chai-as-promised": "~7.1.1",
+    "crypto-js": "^4.1.1",
     "electron-devtools-installer": "~3.2.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
