--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,15 +29,25 @@ jobs:
           yarn --link-duplicates --production=false
           yarn compile-prod
 
-      - name: Build artifact and release
-        uses: samuelmeuli/action-electron-builder@v1.6.0
+      - name: Build artifact and release Mac
+        if: matrix.os == 'macos-latest'
+        run: yarn run electron-builder --mac --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.github_token }}
-          release: true
-          windows_certs: ${{ secrets.CSC_LINK }}
-          windows_certs_password: ${{ secrets.CSC_KEY_PASSWORD }}
+
+      - name: Build artifact and release Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: yarn run electron-builder --linux --publish always
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Build artifact and release Windows
+        if: matrix.os == 'windows-latest'
+        run: yarn run electron-builder --windows --publish always
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          CSC_LINK: ${{secrets.CSC_LINK}}
+          CSC_KEY_PASSWORD: ${{secrets.CSC_KEY_PASSWORD}}
