(test) bump yarn install step's network-timeout value

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: yarn
+        run: yarn install --network-timeout 100000
       - name: Lint
         run: yarn lint
       - name: Check for Circular Dependencies
