--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "electron-devtools-installer": "^3.1.1",
     "electron-store": "5.2.0",
     "electron-updater": "4.2.2",
+    "html-loader": "1.0.0-alpha.0",
     "humps": "2.0.1",
     "js-logger": "1.6.0",
     "jsdom": "14.0.0",
@@ -113,7 +114,7 @@
     "cross-env": "5.2.0",
     "css-loader": "2.1.1",
     "electron": "10.1.5",
-    "electron-builder": "~23.0.2",
+    "electron-builder": "~23.6.0",
     "electron-webpack": "2.6.2",
     "electron-webpack-ts": "3.1.1",
     "enzyme": "3.9.0",
