--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "axios": "~0.24.0",
     "axios-retry": "~3.2.4",
     "chai-as-promised": "~7.1.1",
-    "crypto-js": "^4.1.1",
     "electron-devtools-installer": "~3.2.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
@@ -81,6 +80,7 @@
     "reselect": "~4.1.5",
     "rimraf": "~3.0.2",
     "source-map-support": "~0.5.21",
+    "spark-md5": "^3.0.2",
     "ts-import-plugin": "~2.0.0",
     "ts-node": "~10.4.0",
     "uuid": "~8.3.0"
@@ -103,6 +103,7 @@
     "@types/semver": "~7.3.9",
     "@types/sinon": "~10.0.6",
     "@types/sinon-chai": "~3.2.8",
+    "@types/spark-md5": "^3.0.2",
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "~5.9.0",
     "@typescript-eslint/parser": "~5.9.0",
