--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@aics/frontend-insights": "~0.2.3",
     "@aics/frontend-insights-plugin-amplitude-node": "~0.2.3",
     "@ant-design/icons": "~4.7.0",
-    "@types/crypto-js": "^4.1.1",
+    "@types/spark-md5": "^3.0.2",
     "@types/react-beautiful-dnd": "~13.1.2",
     "@types/react-virtualized-auto-sizer": "~1.0.0",
     "@types/react-window": "~1.8.3",
@@ -61,7 +61,6 @@
     "axios": "~0.24.0",
     "axios-retry": "~3.2.4",
     "chai-as-promised": "~7.1.1",
-    "crypto-js": "^4.1.1",
     "electron-devtools-installer": "~3.2.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
@@ -81,6 +80,7 @@
     "reselect": "~4.1.5",
     "rimraf": "~3.0.2",
     "source-map-support": "~0.5.21",
+    "spark-md5": "^3.0.2",
     "ts-import-plugin": "~2.0.0",
     "ts-node": "~10.4.0",
     "uuid": "~8.3.0"
