--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "compile-prod": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 NODE_ENV=production yarn compile",
     "build-executable": "yarn compile && yarn electron-builder",
     "dist": "electron-builder -p always",
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha src/**/test/*.{ts,tsx}",
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
     "postinstall": "electron-builder install-app-deps",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/"
@@ -113,11 +113,11 @@
     "cross-env": "5.2.0",
     "css-loader": "2.1.1",
     "electron": "10.1.5",
-    "electron-builder": "22.9.1",
+    "electron-builder": "~23.6.0",
     "electron-webpack": "2.6.2",
     "electron-webpack-ts": "3.1.1",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "~1.15.7",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
@@ -125,6 +125,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "4.0.0",
+    "html-loader": "1.0.0-alpha.0",
     "husky": ">=4",
     "less": "3.9.0",
     "less-loader": "4.1.0",
