--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-upload-app",
-  "version": "2.10.1-snapshot.7",
+  "version": "2.10.1",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
