--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@types/react-beautiful-dnd": "~13.1.2",
     "@types/react-virtualized-auto-sizer": "~1.0.0",
     "@types/react-window": "~1.8.3",
-    "@types/spark-md5": "^3.0.2",
+    "@types/spark-md5": "~3.0.2",
     "antd": "~4.18.3",
     "axios": "~0.24.0",
     "axios-retry": "~3.2.4",
@@ -80,7 +80,7 @@
     "reselect": "~4.1.5",
     "rimraf": "~3.0.2",
     "source-map-support": "~0.5.21",
-    "spark-md5": "^3.0.2",
+    "spark-md5": "~3.0.2",
     "ts-import-plugin": "~2.0.0",
     "ts-node": "~10.4.0",
     "uuid": "~8.3.0"
