--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "version": "2.10.2-snapshot.2",
+  "version": "2.10.2-snalshot.3",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
