--js-flags to compile task

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,18 +27,18 @@ jobs:
           ELECTRON_WEBPACK_APP_AMPLITUDE_API_KEY: ${{ secrets.AMPLITUDE_API_KEY }}
         run: |
           yarn --link-duplicates --production=false
-          yarn compile-prod --js-flags="--expose-gc"
+          yarn compile-prod
 
       - name: Build artifact and release Mac
         if: matrix.os == 'macos-latest'
-        run: yarn run electron-builder --js-flags="--expose-gc" --mac --publish always
+        run: yarn run electron-builder --mac --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Build artifact and release Linux
         if: matrix.os == 'ubuntu-latest'
-        run: yarn run electron-builder --js-flags="--expose-gc" --linux --publish always
+        run: yarn run electron-builder --linux --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
