--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build artifact and release Windows
         if: matrix.os == 'windows-latest'
-        run: yarn run electron-builder --js-flags="--expose-gc" --windows --publish always
+        run: yarn run electron-builder --windows --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
