--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dist": "electron-builder -p always",
     "test": "cross-env TS_NODE_PROJECT=tsconfig.commonjs.json TS_NODE_FILES=true NODE_ENV=production mocha --exit src/**/test/*.{ts,tsx}",
     "postinstall": "electron-builder install-app-deps",
+    "test:coverage": "nyc npm run test",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "madge": "madge --warning --circular --ts-config tsconfig.base.json --webpack-config webpack/webpack.render.additions.js --extensions js,jsx,ts,tsx  src/",
     "prepare": "husky install"
@@ -85,6 +86,7 @@
     "uuid": "~8.3.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "~4.3.0",
     "@types/chai-as-promised": "~7.1.4",
     "@types/enzyme": "~3.10.11",
@@ -128,6 +130,7 @@
     "lint-staged": "~12.1.7",
     "madge": "~5.0.1",
     "mocha": "~9.1.3",
+    "nyc": "^15.1.0",
     "mock-css-modules": "~2.0.0",
     "postcss-import": "~14.0.2",
     "postcss-loader": "~4.2.0",
@@ -143,5 +146,23 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --cache --fix"
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "check-coverage": true,
+    "all": true,
+    "include": [
+      "src/**/!(*.test.*).[tj]s?(x)"
+    ],
+    "exclude": [
+      "src/_tests_/**/*.*"
+    ],
+    "reporter": [
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "report-dir": "coverage"
   }
 }
