increasing timeout for dependecies dowloan

--- a/package.json
+++ b/package.json
@@ -143,5 +143,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --cache --fix"
+  },
+  "config": {
+    "networkTimeout": 180000 
   }
 }
