--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "version": "3.1.1-snapshot.0",
+  "version": "3.1.2",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
