--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "version": "3.1.3",
+  "version": "3.1.4-snapshot.0",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
@@ -145,6 +145,6 @@
     "*.{ts,tsx,js,jsx}": "eslint --cache --fix"
   },
   "config": {
-    "networkTimeout": 180000 
+    "networkTimeout": 180000
   }
 }
