--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     }
   },
   "scripts": {
-    "dev": "electron-webpack dev",
-    "compile": "electron-webpack",
-    "compile-cache": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"stg-aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 ELECTRON_WEBPACK_USE_CACHE=true yarn compile",
-    "compile-stage": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"stg-aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 yarn compile",
+    "compile-cache": "cross-env yarn compile",
+    "compile-stage": "cross-env yarn compile",
     "compile-prod": "cross-env ELECTRON_WEBPACK_APP_LIMS_HOST=\"aics.corp.alleninstitute.org\" ELECTRON_WEBPACK_APP_LIMS_PORT=80 NODE_ENV=production yarn compile",
     "build-executable": "yarn compile && yarn electron-builder",
     "dist": "electron-builder -p always",
@@ -64,11 +62,16 @@
     "electron-devtools-installer": "~3.2.0",
     "electron-store": "~8.0.1",
     "electron-updater": "~4.6.1",
+    "file-loader": "^6.0.0",
     "hash-wasm": "^4.9.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "4.0.0",
     "humps": "~2.0.1",
     "jsdom": "~19.0.0",
     "jsdom-global": "~3.0.2",
     "lodash": "~4.17.21",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-loader": "^0.6.0",
     "moment": "~2.29.1",
     "object-hash": "~2.2.0",
     "react": "~17.0.2",
@@ -83,7 +86,8 @@
     "source-map-support": "~0.5.21",
     "ts-import-plugin": "~2.0.0",
     "ts-node": "~10.4.0",
-    "uuid": "~8.3.0"
+    "uuid": "~8.3.0",
+    "url-loader": "^4.0.0"
   },
   "devDependencies": {
     "@types/chai": "~4.3.0",
@@ -109,12 +113,11 @@
     "@wojtekmaj/enzyme-adapter-react-17": "~0.6.6",
     "chai": "~4.3.4",
     "classnames": "~2.3.1",
+    "clean-webpack-plugin": "4.x",
     "cross-env": "~7.0.3",
     "css-loader": "~5.2.7",
     "electron": "~16.0.6",
     "electron-builder": "~23.0.2",
-    "electron-webpack": "~2.8.2",
-    "electron-webpack-ts": "~4.0.1",
     "enzyme": "~3.11.0",
     "eslint": "~8.6.0",
     "eslint-config-prettier": "~8.3.0",
@@ -123,6 +126,7 @@
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-react": "~7.28.0",
     "eslint-plugin-react-hooks": "~4.3.0",
+    "fork-ts-checker-webpack-plugin": "6.x",
     "husky": "~7.0.4",
     "less": "~4.1.2",
     "less-loader": "~7.3.0",
@@ -139,8 +143,11 @@
     "redux-logic": "~3.0.3",
     "sinon": "~12.0.1",
     "sinon-chai": "~3.7.0",
+    "ts-loader": "^6.2.2",
     "typescript": "~4.5.4",
-    "webpack": "~4.46.0"
+    "webpack": "~4.46.0",
+    "webpack-cli": "4.x",
+    "webpack-dev-server": "4.x"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --cache --fix"
