--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "version": "3.2.0",
+  "version": "3.2.1-snapshot.0",
   "build": {
     "appId": "org.aics.alleninstitute.fileupload",
     "files": [
@@ -13,6 +13,9 @@
     ],
     "linux": {
       "target": "AppImage"
+    },
+    "mac": {
+      "target": "dmg"
     },
     "publish": {
       "provider": "s3",
@@ -73,8 +76,8 @@
     "jsdom-global": "~3.0.2",
     "lodash": "~4.17.21",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-loader": "^0.6.0",
     "moment": "~2.29.1",
+    "node-loader": "^0.6.0",
     "object-hash": "~2.2.0",
     "react": "~17.0.2",
     "react-beautiful-dnd": "~13.1.0",
@@ -88,8 +91,8 @@
     "source-map-support": "~0.5.21",
     "ts-import-plugin": "~2.0.0",
     "ts-node": "~10.4.0",
-    "uuid": "~8.3.0",
-    "url-loader": "^4.0.0"
+    "url-loader": "^4.0.0",
+    "uuid": "~8.3.0"
   },
   "devDependencies": {
     "@types/chai": "~4.3.0",
