--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,12 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: yarn
+        run: npm install
       - name: Lint
-        run: yarn lint
+        run: npm run lint
       - name: Check for Circular Dependencies
-        run: yarn madge
+        run: npm run madge
       - name: Unit Test
-        run: yarn test
+        run: npm run test
       - name: Compile
-        run: yarn compile
+        run: npm run compile
