--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,21 +31,21 @@ jobs:
 
       - name: Build artifact and release Mac
         if: matrix.os == 'macos-latest'
-        run: node node-modules/electron-builder/cli.js --mac --publish always
+        run: npx --no-install electron-builder --mac --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Build artifact and release Linux
         if: matrix.os == 'ubuntu-latest'
-        run: node node-modules/electron-builder/cli.js --linux --publish always
+        run: npx --no-install electron-builder --linux --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Build artifact and release Windows
         if: matrix.os == 'windows-latest'
-        run: node node-modules/electron-builder/cli.js --windows --publish always
+        run: npx --no-install electron-builder --windows --publish always
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
