--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@main
 
-      - name: Install Node.js, NPM, and Yarn
+      - name: Install Node.js, NPM
         uses: actions/setup-node@main
         with:
           node-version: 22
