Create "universal" builds for MacOS (work on both Apple Silicon and Intel)

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
       "target": "AppImage"
     },
     "mac": {
-      "target": "dmg"
+      "target": {
+        "target": "dmg",
+        "arch": "universal"
+      }
     },
     "npmRebuild": false,
     "directories": {
